<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tetris"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/layout_margin_vertical"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="32dp"
            android:textColor="#fff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_new_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tetris_shape"
                android:text="@string/btn_main_new_game"
                android:textColor="@color/color_white" />

            <Button
                android:id="@+id/btn_reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/tetris_shape"
                android:padding="4dp"
                android:text="@string/btn_main_reset_score"
                android:textColor="@color/color_white" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tetris_shape"
                android:text="@string/btn_main_exit"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>